feat: initial navbar changes

--- a/templates/503.html
+++ b/templates/503.html
@@ -17,7 +17,7 @@
                 'nblue': {  DEFAULT: '#00D2D2',  '50': '#8BFFFF',  '100': '#76FFFF',  '200': '#4DFFFF',  '300': '#25FFFF',  '400': '#00FBFB',  '500': '#00D2D2',  '600': '#009A9A',  '700': '#006262',  '800': '#002A2A',  '900': '#000000'},
               },
               fontFamily: {
-                Orbitron: ['Orbitron'],
+                Inter: ['Inter'],
                },
             }
           }
@@ -83,44 +83,11 @@
       </style>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
 </head>
-<body class="font-Orbitron">
-    <header class="sticky top-0 z-50 text-gray-400 bg-nblue-800 body-font">
-        <div
-          class="container mx-auto flex flex-wrap p-5 mt-0 mb-0 flex-col md:flex-row items-center"
-        >
-          <nav class="flex lg:w-2/5 flex-wrap items-center text-base md:ml-auto">
-            <a href="/leaderboard/" class="mr-5 text-nblue hover:text-nblue-200">Leaderboard</a>
-            <a href="/faqs/" class="mr-5 text-nblue hover:text-nblue-200">FAQs</a>
-            <a href="/about/" class="text-nblue hover:text-nblue-200">About</a>
-          </nav>
-          <a href="#" class="flex order-first lg:order-none lg:w-1/5 title-font font-medium items-center text-white lg:items-center lg:justify-center mb-4 md:mb-0">
-            <img src="https://static.redcrypt.ml/logo_banner.svg" class="h-12 -m-2">
-          </a>
-          <div class="lg:w-2/5 inline-flex lg:justify-end ml-5 lg:ml-0">
-            <div class="flex justify-center">
-              <a href="{% url 'account_login' %}">
-                <button class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-nblue-200 to-nblue-600 group-hover:from-nblue-200 group-hover:to-nblue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-cyan-200 dark:focus:ring-cyan-800">
-                    <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-nblue-800 text-white rounded-md group-hover:bg-opacity-0">
-                        Login
-                    </span>
-                  </button>
-                </a>
-                <a href="{% url 'account_signup' %}">
-                  <button class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-nblue-200 to-nblue-600 group-hover:from-nblue-200 group-hover:to-nblue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-cyan-200 dark:focus:ring-cyan-800">
-                    <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-nblue-800 text-white rounded-md group-hover:bg-opacity-0">
-                        Signup
-                    </span>
-                  </button>
-                </a>  
-              </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </header>
+<body class="font-Inter">
+    {% include 'no_auth_header.html' %}
       
     <center>
         <div class="justify-center">
