--- a/templates/auth_header.html
+++ b/templates/auth_header.html
@@ -26,9 +26,11 @@
   id="mobile-menu"
   class="fixed inset-y-0 right-0 w-64 bg-neutral-900/80 transform translate-x-full transition-transform duration-300 ease-in-out backdrop-blur-lg border-l border-nblue z-40 md:hidden"
 >
-  <div class="flex flex-col h-full p-4">
+  <div class="flex flex-col h-full p-8">
     <div class="flex items-center justify-between mb-8">
-      <img src="{% static 'logo_banner.svg' %}" class="h-8" />
+      <a href="{% url 'index' %}">
+        <img src="{% static 'logo_banner.svg' %}" class="h-8" />
+      </a>
     </div>
     <nav class="flex flex-col space-y-4">
       <a
@@ -124,7 +126,9 @@
 
       <!-- Center Logo -->
       <div class="flex-none flex justify-center">
-        <img src="{% static 'logo_banner.svg' %}" class="h-6" />
+        <a href="{% url 'index' %}">
+          <img src="{% static 'logo_banner.svg' %}" class="h-6" />
+        </a>
       </div>
 
       <!-- Right Side -->
@@ -142,7 +146,7 @@
           <!-- Dropdown Menu -->
           <nav
             tabindex="0"
-            class="border bg-neutral-900/80 invisible border-2 border-green-600 rounded-lg w-60 absolute right-0 top-full transition-all opacity-0 group-focus-within:visible group-focus-within:opacity-100 group-focus-within:translate-y-1 backdrop-blur-lg"
+            class="border bg-neutral-900/80 invisible border-green-600 rounded-lg w-60 absolute right-0 top-full transition-all opacity-0 group-focus-within:visible group-focus-within:opacity-100 group-focus-within:translate-y-1 backdrop-blur-lg"
             style="z-index: 5"
           >
             <ul class="py-1">
