--- a/templates/no_auth_header.html
+++ b/templates/no_auth_header.html
@@ -26,14 +26,16 @@
   id="mobile-menu"
   class="fixed inset-y-0 right-0 w-64 bg-neutral-900/80 transform translate-x-full transition-transform duration-300 ease-in-out backdrop-blur-lg z-40 md:hidden"
 >
-  <div class="flex flex-col h-full p-4">
+  <div class="flex flex-col h-full p-8">
     <div class="flex items-center justify-between mb-8">
-      <img src="{% static 'logo_banner.svg' %}" class="h-8" />
+      <a href="{% url 'index' %}">
+        <img src="{% static 'logo_banner.svg' %}" class="h-8" />
+      </a>
     </div>
     <nav class="flex flex-col space-y-4">
       <a
         href="{% url 'leaderboard' %}"
-        class=" text-neutral-100 font-bold hover:text-neutral-200 py-2"
+        class="text-neutral-100 font-bold hover:text-neutral-200 py-2"
         >Leaderboard</a
       >
       <a
@@ -64,29 +66,49 @@
 
 <!-- Desktop Navigation -->
 <div class="w-full fixed top-0 hidden items-start justify-center z-30 md:flex">
-  <header class="text-neutral-400 body-font w-2/3 bg-neutral-950/20 mx-auto mt-4 rounded-full backdrop-blur-md border border-neutral-700 px-3 py-1">
+  <header
+    class="text-neutral-400 body-font w-2/3 bg-neutral-950/20 mx-auto mt-4 rounded-full backdrop-blur-md border border-neutral-700 px-3 py-1"
+  >
     <div class="container mx-auto flex p-5 items-center justify-between">
       <!-- Left Nav -->
       <nav class="flex-1 flex justify-start items-center gap-5">
-        <a href="{% url 'leaderboard' %}" class="{% if url_name == 'leaderboard' %}text-neutral-100{% else %}text-neutral-100{% endif %} hover:text-neutral-200 font-bold">Leaderboard</a>
-        <a href="{% url 'rules' %}" class="{% if url_name == 'rules' %}text-neutral-100{% else %}text-neutral-100{% endif %} hover:text-neutral-200 font-bold">Rules</a>
-        <a href="{% url 'about' %}" class="{% if url_name == 'about' %}text-neutral-100{% else %}text-neutral-100{% endif %} hover:text-neutral-200 font-bold">About</a>
+        <a
+          href="{% url 'leaderboard' %}"
+          class="{% if url_name == 'leaderboard' %}text-neutral-100{% else %}text-neutral-100{% endif %} hover:text-neutral-200 font-bold"
+          >Leaderboard</a
+        >
+        <a
+          href="{% url 'rules' %}"
+          class="{% if url_name == 'rules' %}text-neutral-100{% else %}text-neutral-100{% endif %} hover:text-neutral-200 font-bold"
+          >Rules</a
+        >
+        <a
+          href="{% url 'about' %}"
+          class="{% if url_name == 'about' %}text-neutral-100{% else %}text-neutral-100{% endif %} hover:text-neutral-200 font-bold"
+          >About</a
+        >
       </nav>
 
       <!-- Center Logo -->
       <div class="flex-none flex justify-center">
-        <img src="{% static 'logo_banner.svg' %}" class="h-6">
+        <a href="{% url 'index' %}">
+          <img src="{% static 'logo_banner.svg' %}" class="h-6" />
+        </a>
       </div>
 
       <!-- Right Side -->
       <div class="flex-1 flex justify-end items-center gap-3">
         <a href="{% url 'account_login' %}">
-          <span class="px-5 py-1.5 transition-all ease-in duration-75 hover:bg-neutral-300 bg-neutral-200 text-black rounded-full">
+          <span
+            class="px-5 py-1.5 transition-all ease-in duration-75 hover:bg-neutral-300 bg-neutral-200 text-black rounded-full"
+          >
             Login
           </span>
         </a>
         <a href="{% url 'account_signup' %}">
-          <span class="px-5 py-1.5 transition-all ease-in duration-75 bg-green-600 hover:bg-green-800 text-white rounded-full">
+          <span
+            class="px-5 py-1.5 transition-all ease-in duration-75 bg-green-600 hover:bg-green-800 text-white rounded-full"
+          >
             Signup
           </span>
         </a>
