--- a/templates/auth_header.html
+++ b/templates/auth_header.html
@@ -1,94 +1,42 @@
 {% load static %} {% load profile_tags %}
-<!-- Mobile Menu Button -->
-<button
-  id="mobile-menu-button"
-  class="fixed top-4 right-4 z-50 p-2 rounded-lg bg-neutral-900 border-2 border-green-600 md:hidden"
->
-  <svg
-    class="w-6 h-6 text-green-600"
-    id="menu-icon"
-    fill="none"
-    stroke="currentColor"
-    viewBox="0 0 24 24"
-  >
-    <path
-      class="origin-center transition-transform"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke-width="2"
-      d="M4 6h16M4 12h16M4 18h16"
-    />
-  </svg>
-</button>
+<!-- Mobile Navbar -->
+<nav class="fixed top-0 left-0 right-0 z-50 flex items-center justify-between p-4 bg-neutral-900/80 backdrop-blur-md border-b border-green-600 md:hidden">
+  <a href="{% url 'index' %}">
+    <img src="{% static 'logo_banner.svg' %}" class="h-6" />
+  </a>
+  <button id="mobile-menu-button" class="p-2 rounded-lg">
+    <svg class="w-6 h-6 text-green-600" id="menu-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path class="origin-center transition-transform" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+    </svg>
+  </button>
+</nav>
 
-<!-- Mobile Menu Drawer -->
-<div
-  id="mobile-menu"
-  class="fixed inset-y-0 right-0 w-64 bg-neutral-900/80 transform translate-x-full transition-transform duration-300 ease-in-out backdrop-blur-lg border-l border-nblue z-40 md:hidden"
->
-  <div class="flex flex-col h-full p-8">
-    <div class="flex items-center justify-between mb-8">
-      <a href="{% url 'index' %}">
-        <img src="{% static 'logo_banner.svg' %}" class="h-8" />
-      </a>
-    </div>
+<!-- Mobile Menu Dropdown -->
+<div id="mobile-menu" class="fixed inset-x-0 top-[60px] bg-neutral-900/80 transform -translate-y-[150%] transition-transform duration-300 ease-in-out backdrop-blur-lg z-40 md:hidden">
+  <div class="flex flex-col p-4">
     <nav class="flex flex-col space-y-4">
-      <a
-        href="{% url 'play' %}"
-        class="text-neutral-100 font-bold hover:text-neutral-200 py-2"
-        >Play</a
-      >
-      <a
-        href="{% url 'leaderboard' %}"
-        class="text-neutral-100 font-bold hover:text-neutral-200 py-2"
-        >Leaderboard</a
-      >
-      <a
-        href="{% url 'rules' %}"
-        class="text-neutral-100 font-bold hover:text-neutral-200 py-2"
-        >Rules</a
-      >
-      <a
-        href="{% url 'about' %}"
-        class="text-neutral-100 font-bold hover:text-neutral-200 py-2"
-        >About</a
-      >
+      <a href="{% url 'play' %}" class="text-neutral-100 font-bold hover:text-neutral-200 py-2 text-left">Play</a>
+      <a href="{% url 'leaderboard' %}" class="text-neutral-100 font-bold hover:text-neutral-200 py-2 text-left">Leaderboard</a>
+      <a href="{% url 'rules' %}" class="text-neutral-100 font-bold hover:text-neutral-200 py-2 text-left">Rules</a>
+      <a href="{% url 'about' %}" class="text-neutral-100 font-bold hover:text-neutral-200 py-2 text-left">About</a>
     </nav>
-    <div class="mt-auto">
-      <div class="flex items-center mb-4 space-x-3">
-        <img
-          src="{% avatar user %}"
-          alt="avatar"
-          class="w-10 h-10 rounded-full border-2 border-green-600"
-        />
-        <span class="text-neutral-100 font-bold">{{user.username}}</span>
-      </div>
-      <div class="flex flex-col space-y-2">
-        {% if user.is_staff %}
-        <a
-          href="/honeypot/"
-          class="text-neutral-100 font-bold hover:bg-neutral-700 rounded px-4 py-2"
-          >Admin Panel</a
-        >
-        {% endif %}
-        <a
-          href="{% url 'profile' %}"
-          class="text-neutral-100 font-bold hover:bg-neutral-700 rounded px-4 py-2"
-          >Profile</a
-        >
-        <form
-          action="{% url 'account_logout' %}"
-          method="POST"
-          class="contents"
-        >
-          {% csrf_token %}
-          <button
-            type="submit"
-            class="text-neutral-100 font-bold hover:bg-neutral-700 rounded px-4 py-2 text-left w-full"
-          >
-            Sign Out
-          </button>
-        </form>
+    
+    <div class="flex items-center my-4 space-x-3">
+      <img src="{% avatar user %}" alt="avatar" class="w-10 h-10 rounded-full border-2 border-green-600"/>
+      <span class="text-neutral-100 font-bold">{{user.username}}</span>
+    </div>
+
+    <div class="flex flex-col space-y-2">
+      {% if user.is_staff %}
+      <a href="/honeypot/" class="text-center text-neutral-100 font-bold hover:bg-neutral-700 rounded px-4 py-2">Admin Panel</a>
+      {% endif %}
+      <a href="{% url 'profile' %}" class="text-center text-neutral-100 font-bold hover:bg-neutral-700 rounded px-4 py-2">Profile</a>
+      <form action="{% url 'account_logout' %}" method="POST" class="contents">
+        {% csrf_token %}
+        <button type="submit" class="text-center text-neutral-100 font-bold hover:bg-neutral-700 rounded px-4 py-2 w-full">Sign Out</button>
+      </form>
+      <div id="install">
+        <button type="submit" id="installapp" class="text-center text-neutral-100 font-bold hover:bg-neutral-700 rounded px-4 py-2 w-full">Install App</button>
       </div>
     </div>
   </div>
@@ -217,10 +165,10 @@
   mobileMenuButton.addEventListener("click", () => {
     isOpen = !isOpen;
     if (isOpen) {
-      mobileMenu.classList.remove("translate-x-full");
+      mobileMenu.classList.remove("-translate-y-[150%]");
       menuIcon.classList.add("rotate-90");
     } else {
-      mobileMenu.classList.add("translate-x-full");
+      mobileMenu.classList.add("-translate-y-[150%]");
       menuIcon.classList.remove("rotate-90");
     }
   });
@@ -233,7 +181,7 @@
       !mobileMenuButton.contains(e.target)
     ) {
       isOpen = false;
-      mobileMenu.classList.add("translate-x-full");
+      mobileMenu.classList.add("-translate-y-[150%]");
       menuIcon.classList.remove("rotate-90");
     }
   });
